--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body{
     margin: 0 auto;
     padding: 0;
     font-family: 'Noto Sans JP', sans-serif;
+    background-image: url(./images/alan-veas-HQ0QdmWd-MM-unsplash.jpg);
 }
 
 .container{
@@ -17,6 +18,7 @@ body{
 h1{
     font-size: 42px;
     font-weight: 600;
+    color: white;
 }
 .mr-5{
     margin-right: 5px;
@@ -41,7 +43,6 @@ h1{
 nav {
     background-color: rgb(182, 7, 182);
     color: white;
-    position: fixed;
     width: 100%;
 }
 
@@ -60,12 +61,13 @@ a:link{
 }
 
 a:hover{
-    color:rgb(70, 25, 70);
+    color:rgb(199, 63, 10);
 }
+
 
 #summary{
     padding-top: 80px;
-    background-image: url(./images/alan-veas-HQ0QdmWd-MM-unsplash.jpg);
+    /* background-image: url(./images/alan-veas-HQ0QdmWd-MM-unsplash.jpg); */
     background-size: 100%;
     color: white;
 
@@ -99,7 +101,7 @@ a:hover{
 
 #profile{
     padding-top: 70px;
-    background-image: url(./images/joe-woods-4Zaq5xY5M_c-unsplash.jpg);
+    /* background-image: url(./images/joe-woods-4Zaq5xY5M_c-unsplash.jpg); */
     background-size: 100%;
     background-position: center
 }
@@ -109,8 +111,12 @@ a:hover{
 }
 
 #profile .text{
-    color: black;
+    color: white;
     font-weight: 700;
+}
+
+#profile img{
+    padding-left: 30px;
 }
 
 #profile .button{
@@ -133,3 +139,55 @@ a:hover{
         border-left: 20px solid red;
         box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
+
+#skill{
+    padding-top: 80px;
+}
+
+.col-style{
+    justify-content: center;
+    display: flex;
+    
+    }
+    
+.card:hover{
+    transform: scale(1.2);
+    transition: 1s;
+}
+
+.card{
+    background-image: linear-gradient(to right top, #d6a8ed, #c09ee4, #ab94da, #958bd0, #7f81c5);
+}
+
+#project{
+    padding: 80px;
+    color: white;
+}
+
+#project .col-lg-4{
+    color: rgb(255, 0, 242);
+}
+
+#project h3{
+    color: rgb(175, 53, 53);
+    font-weight: 600;
+}  
+
+#contact{
+    color: white;
+}
+
+#contact h1{
+    font-size: 56px;
+}
+#contact h3{
+    color: yellowgreen;
+}
+
+#footer{
+    background-color: rgb(182, 7, 182);
+    padding: 10px;
+    text-align: center;
+    color: white;
+}
+
