--- a/style.css
+++ b/style.css
@@ -188,6 +188,6 @@ a:hover{
     background-color: rgb(182, 7, 182);
     padding: 10px;
     text-align: center;
-    color: white;
+    color: wheat;
 }
 
